<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="activity"
            type="com.udacity.ui.MainActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.MainActivity"
        tools:showIn="@layout/activity_main">

        <ImageView
            android:id="@+id/top_image_view"
            android:layout_width="@dimen/to_constraint"
            android:layout_height="200dp"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/ic_baseline_cloud_download_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="@dimen/to_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/fab_margin"
            android:layout_marginEnd="@dimen/fab_margin"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_image_view">

            <RadioButton
                android:id="@+id/rb_glide_dl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRBClicked"
                android:text="@string/glide" />

            <RadioButton
                android:id="@+id/rb_loadapp_dl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRBClicked"
                android:text="@string/loadApp" />

            <RadioButton
                android:id="@+id/rb_retrofit_dl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRBClicked"
                android:text="@string/retrofit" />

        </RadioGroup>

        <com.udacity.custom_button.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="@dimen/to_constraint"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/fab_margin"
            app:backgroundColor="@color/colorPrimary"
            app:inProgressBackgroundColor="@color/colorPrimaryDark"
            app:circleProgressColor="@color/colorAccent"
            tools:text="@string/button_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>