<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_motion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.DetailActivity"
    android:padding="@dimen/fab_margin"
    tools:showIn="@layout/activity_detail"
    tools:showPaths="true"
    app:layoutDescription="@xml/details_scene">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/label_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="file_name_label,file_status_label" />

    <TextView
        android:id="@+id/file_name_label"
        android:text="@string/file_name_url"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_medium_size"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/file_name_text"
        tools:text="@string/file_name_url"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_medium_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/file_status_label"
        android:text="@string/status"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_medium_size"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        app:layout_constraintTop_toBottomOf="@+id/file_name_text" />

    <TextView
        android:id="@+id/file_status_text"
        tools:text="@string/status"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_medium_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- *insert Owen Wilson here* -->
    <TextView
        android:id="@+id/wow_text"
        android:text="@string/wow"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_giant_size"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/button_okay"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/okay_button"
        android:textColor="@color/white"
        android:background="@color/button_completed_color"
        android:textSize="@dimen/text_medium_size"
        android:textAllCaps="false"
        android:textStyle="bold"
        />

</androidx.constraintlayout.motion.widget.MotionLayout>